# Caelum

./: .env.example  .gitignore  CMakeLists.txt  DESIGN.md  MOONS.md  README.md  build-run.bat  build-run.sh  build-web.bat  build-web.sh  config.yaml  hex-shell.html  run-tests.bat  setup-emsdk.bat  setup.sh  worker.json
.github/workflows/: build.yml
.history/: config_20260301003356.yaml  config_20260301003750.yaml  config_20260301004457.yaml  config_20260301004625.yaml  config_20260301004728.yaml  config_20260301004736.yaml  config_20260301051513.yaml
config/: ai_config.yaml.example  ai_directives.txt
docs/: TERRAIN-ROADMAP.md  advanced_terraingen.md  agent_commands.md  ai_architecture.md  hex-collision-design.md  lighting.md  voxel-interaction-research.md
server/: package.json
server/api/: signal.js
server/api/lobby/: create.js  edit.js  join.js  list.js
shaders/: agent.glsl  agent.glsl.h  atmosphere.glsl  atmosphere.glsl.h  hex_terrain.glsl  hex_terrain.glsl.h  highlight.glsl  highlight.glsl.h  hotbar.glsl  hotbar.glsl.h  planet.glsl  planet.glsl.h  sky.glsl  sky.glsl.h  torch.glsl  torch.glsl.h
src/: ai_actions.c  ai_actions.h  ai_agent.c  ai_agent.h  ai_emotions.c  ai_emotions.h  ai_memory.c  ai_memory.h  ai_npc.c  ai_npc.h  ai_orders.c  ai_orders.h  ai_pathfind.c  ai_pathfind.h  ai_script.c  ai_script.h  ai_sensors.c  ai_sensors.h  ai_vision.c  ai_vision.h  atmosphere.c  atmosphere.h  camera.c  camera.h  celestial.c  celestial.h  config.c  config.h  crash_handler.c  crash_handler.h  erosion.c  erosion.h  hex_terrain.c  hex_terrain.h  hex_vertex.h  job_system.c  job_system.h  lobby.c  lobby.h  lod.c  (+28 more)
tests/: test_framework.h  test_main.c  test_math.c  test_mesh.c  test_planet.c
tools/: ai-grammar.gbnf  ai-install.bat  heightmap_gen.c  walter.json
tools/build-viewer/: build-run.bat
tools/build-viewer/BuildViewer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
tools/char-editor/: run.bat
tools/char-editor/CharEditor/: App.xaml  App.xaml.cs  CharEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
tools/char-editor/CharEditor/Generators/: AnimationController.cs  HexBodyGenerator.cs
tools/char-editor/CharEditor/Models/: AgentCharacter.cs  AgentExport.cs  DirectiveTemplates.cs
tools/char-editor/CharEditor/Services/: AiProvider.cs  ChatService.cs
web/: shell.html
